[RLS] LocalFrameView::ContentsSize shouldn't reflect overflow

With RLS enabled, LocalFrameView::ContentsSize returns the size of
the LayoutView's layout overflow rect. This is problematic,
since the LocalFrameView should not have overflow with RLS.
Made LFV::ContentsSize equal to LFV::VisibleContentSize incase of RLS.

Bug: 757634
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I37597f910d0b2fbf9755e28950dd10ab87e529fe